--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "babel-node spec/run.js",
     "sass": "sass styles/styles.scss dist/styles.css",
     "webpack": "webpack",
-    "start": "npm run webpack && npm run sass && http-server"
+    "build-run": "npm run webpack && npm run sass && http-server"
   },
   "repository": {
     "type": "git",
